[gd_scene load_steps=18 format=2]

[ext_resource path="res://asset/copyduck/Copyduck.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resource/button_theme.tres" type="Theme" id=2]
[ext_resource path="res://resource/title_theme.tres" type="Theme" id=3]
[ext_resource path="res://scene/Menu.gd" type="Script" id=4]
[ext_resource path="res://scene/Alert.tscn" type="PackedScene" id=5]
[ext_resource path="res://resource/tech_theme.tres" type="Theme" id=6]
[ext_resource path="res://resource/black_style_box.tres" type="StyleBox" id=7]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="GDScript" id=17]
script/source = "extends PopupPanel

class_name HorzDialog
"

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="DynamicFont" id=19]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=20]
default_font = SubResource( 19 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[node name="Menu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 4 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 26.0
margin_bottom = 91.0
grow_horizontal = 2
theme = ExtResource( 3 )
text = "Academia: Fall of the Citadel"
align = 1

[node name="Buttons" type="VBoxContainer" parent="."]
margin_top = 114.0
margin_right = 798.0
margin_bottom = 447.0
custom_constants/separation = 30

[node name="Enter" type="Button" parent="Buttons"]
margin_left = 352.0
margin_right = 445.0
margin_bottom = 36.0
focus_neighbour_left = NodePath("../Perish")
focus_neighbour_top = NodePath("../Perish")
focus_neighbour_right = NodePath("../HelpMe")
focus_neighbour_bottom = NodePath("../HelpMe")
focus_next = NodePath("../HelpMe")
focus_previous = NodePath("../Perish")
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 2 )
text = "Enter"
flat = true

[node name="HelpMe" type="Button" parent="Buttons"]
margin_left = 333.0
margin_top = 66.0
margin_right = 464.0
margin_bottom = 102.0
focus_neighbour_left = NodePath("../Enter")
focus_neighbour_top = NodePath("../Enter")
focus_neighbour_right = NodePath("../Credit")
focus_neighbour_bottom = NodePath("../Credit")
focus_next = NodePath("../Credit")
focus_previous = NodePath("../Enter")
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 2 )
text = "Help Me"
flat = true

[node name="Credit" type="Button" parent="Buttons"]
margin_left = 332.0
margin_top = 132.0
margin_right = 465.0
margin_bottom = 168.0
focus_neighbour_left = NodePath("../HelpMe")
focus_neighbour_top = NodePath("../HelpMe")
focus_neighbour_right = NodePath("../Perish")
focus_neighbour_bottom = NodePath("../Perish")
focus_next = NodePath("../Perish")
focus_previous = NodePath("../HelpMe")
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 2 )
text = "Eulogia"
flat = true

[node name="Perish" type="Button" parent="Buttons"]
margin_left = 346.0
margin_top = 198.0
margin_right = 451.0
margin_bottom = 234.0
focus_neighbour_left = NodePath("../Credit")
focus_neighbour_top = NodePath("../Credit")
focus_neighbour_right = NodePath("../Enter")
focus_neighbour_bottom = NodePath("../Enter")
focus_next = NodePath("../Enter")
focus_previous = NodePath("../Credit")
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 2 )
text = "Perish"
flat = true

[node name="SeedDialog" type="PopupPanel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -27.0
custom_styles/panel = SubResource( 16 )
script = SubResource( 17 )

[node name="HBoxContainer" type="HBoxContainer" parent="SeedDialog"]
margin_right = 800.0
margin_bottom = 27.0

[node name="Label" type="Label" parent="SeedDialog/HBoxContainer"]
margin_top = 4.0
margin_right = 35.0
margin_bottom = 23.0
theme = ExtResource( 6 )
text = "Seed:"

[node name="Line" type="LineEdit" parent="SeedDialog/HBoxContainer"]
margin_left = 39.0
margin_right = 87.0
margin_bottom = 27.0
theme = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
max_length = 80
expand_to_text_length = true
caret_blink = true

[node name="Reject" parent="SeedDialog" instance=ExtResource( 5 )]

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -19.0
grow_horizontal = 0
text = "Version"

[node name="ModeDialog" type="PopupDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 18 )

[node name="Buttons" type="VBoxContainer" parent="ModeDialog"]
margin_top = 114.0
margin_right = 798.0
margin_bottom = 447.0
custom_constants/separation = 30

[node name="Regular" type="Button" parent="ModeDialog/Buttons"]
margin_right = 798.0
margin_bottom = 36.0
focus_neighbour_left = NodePath("../Duck")
focus_neighbour_top = NodePath("../Duck")
focus_neighbour_right = NodePath("../Duck")
focus_neighbour_bottom = NodePath("../Duck")
focus_next = NodePath("../Duck")
focus_previous = NodePath("../Duck")
theme = ExtResource( 2 )
text = "Regular"
flat = true

[node name="Duck" type="Button" parent="ModeDialog/Buttons"]
margin_top = 66.0
margin_right = 798.0
margin_bottom = 109.0
focus_neighbour_left = NodePath("../Regular")
focus_neighbour_top = NodePath("../Regular")
focus_neighbour_right = NodePath("../Regular")
focus_neighbour_bottom = NodePath("../Regular")
focus_next = NodePath("../Regular")
focus_previous = NodePath("../Regular")
theme = SubResource( 20 )
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "Duck"
flat = true

[connection signal="gui_input" from="." to="." method="_on_Menu_gui_input"]
[connection signal="gui_input" from="Buttons/Enter" to="." method="_on_Enter_gui_input"]
[connection signal="mouse_entered" from="Buttons/Enter" to="." method="_on_Enter_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Enter" to="." method="_on_Enter_mouse_exited"]
[connection signal="pressed" from="Buttons/Enter" to="." method="_on_Enter_pressed"]
[connection signal="mouse_entered" from="Buttons/HelpMe" to="." method="_on_HelpMe_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/HelpMe" to="." method="_on_HelpMe_mouse_exited"]
[connection signal="pressed" from="Buttons/HelpMe" to="." method="_on_HelpMe_pressed"]
[connection signal="mouse_entered" from="Buttons/Credit" to="." method="_on_Credit_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Credit" to="." method="_on_Credit_mouse_exited"]
[connection signal="pressed" from="Buttons/Credit" to="." method="_on_Credit_pressed"]
[connection signal="mouse_entered" from="Buttons/Perish" to="." method="_on_Perish_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Perish" to="." method="_on_Perish_mouse_exited"]
[connection signal="pressed" from="Buttons/Perish" to="." method="_on_Perish_pressed"]
[connection signal="hide" from="SeedDialog" to="." method="_on_SeedDialog_hide"]
[connection signal="gui_input" from="SeedDialog/HBoxContainer/Line" to="." method="_on_SeedDialog_line_gui_input"]
[connection signal="text_change_rejected" from="SeedDialog/HBoxContainer/Line" to="." method="_on_SeedDialog_line_text_change_rejected"]
[connection signal="text_changed" from="SeedDialog/HBoxContainer/Line" to="." method="_on_SeedDialog_line_text_changed"]
[connection signal="text_entered" from="SeedDialog/HBoxContainer/Line" to="." method="_on_SeedDialog_line_text_entered"]
[connection signal="about_to_show" from="ModeDialog" to="." method="_on_ModeDialog_about_to_show"]
[connection signal="hide" from="ModeDialog" to="." method="_on_ModeDialog_hide"]
[connection signal="mouse_entered" from="ModeDialog/Buttons/Regular" to="." method="_on_Regular_mouse_entered"]
[connection signal="mouse_exited" from="ModeDialog/Buttons/Regular" to="." method="_on_Regular_mouse_exited"]
[connection signal="pressed" from="ModeDialog/Buttons/Regular" to="." method="_on_Regular_pressed"]
[connection signal="mouse_entered" from="ModeDialog/Buttons/Duck" to="." method="_on_Duck_mouse_entered"]
[connection signal="mouse_exited" from="ModeDialog/Buttons/Duck" to="." method="_on_Duck_mouse_exited"]
[connection signal="pressed" from="ModeDialog/Buttons/Duck" to="." method="_on_Duck_pressed"]
